test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-nil.chpl
//  lhs: unmanaged!  rhs: nil?  error: nlb

class MyClass {
  var x: int;
}



var lhs: unmanaged MyClass = nil;

//todo: uncomment this without changing .good:   compilerError("done");
