test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-nil.good
init-var-nonnil-unmanaged-from-oknil-nil.chpl:9: error: cannot initialize 'lhs' of type 'unmanaged MyClass' from 'nil'
